# TMA4280project2

./: .gitignore  CMakeLists.txt  README.md
alias/: bash_alias
results/: plotResults.py  plotSolution.py  results.txt  time-and-speedup.py
src/: .parallel-poisson.cpp.swp  main.cpp  parallel-poisson.cpp  poisson.cpp  test.cpp  test_mpi_alltoall.cpp
src/test-files/: test.cpp  test_alltoallv.cpp
test/: vtest
